Se agregan mas estilos sass

--- a/index.html
+++ b/index.html
@@ -1099,7 +1099,7 @@
           primera pagina web responsiva, sin la necesidad de aplicar librerias externas para CSS.
         </p>
 
-        <h2 class="box-contenido__subtitle">Instructor: Manuel Gonzalez/h2>
+        <h2 class="box-contenido__subtitle">Instructor: Manuel Gonzalez</h2>
 
           <div class="box-contenido__icon">
             <a href="https://icons8.com/icon/mqLrsbZsiolV/like"><img
